--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "bullmq": "^5.53.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
+    "groq-sdk": "^0.23.0",
     "handlebars": "^4.7.8",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
