--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "class-validator": "^0.14.2",
     "groq-sdk": "^0.23.0",
     "handlebars": "^4.7.8",
+    "hbs": "^4.2.0",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
     "pg": "^8.16.0",
