--- a/package.json
+++ b/package.json
@@ -38,13 +38,17 @@
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/swagger": "^11.2.0",
     "@nestjs/typeorm": "^11.0.0",
+    "axios": "^1.10.0",
     "bcrypt": "^6.0.0",
     "bullmq": "^5.53.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
+    "form-data": "^4.0.3",
     "groq-sdk": "^0.23.0",
     "handlebars": "^4.7.8",
     "hbs": "^4.2.0",
+    "multer": "^2.0.1",
+    "openai": "^5.5.1",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
     "pg": "^8.16.0",
@@ -59,6 +63,7 @@
     "@nestjs/testing": "^10.0.0",
     "@types/express": "^5.0.0",
     "@types/jest": "^29.5.2",
+    "@types/multer": "^1.4.13",
     "@types/node": "^20.3.1",
     "@types/supertest": "^6.0.0",
     "@typescript-eslint/eslint-plugin": "^8.0.0",
