--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "handlebars": "^4.7.8",
     "hbs": "^4.2.0",
     "multer": "^2.0.1",
+    "nanoid": "3.3.7",
     "openai": "^5.5.1",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
